# shell_sage

./: .gitignore  .tmux.conf  CHANGELOG.md  CONTRIBUTING.md  README.md  cachy.jsonl  config.html  config.html.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  search.json  settings.ini  sitemap.xml  tmux.conf  tools.html  tools.html.md
debug/: aliases.py  probe_tty.py  safe_aliases.py
ipython/: 00-init.py  01-prompt.py  02-keybindings.py
nbs/: 00_core.ipynb  01_config.ipynb  02_logview.ipynb  02_rag.ipynb  02_tools.ipynb  custom.yml  index.ipynb  nbdev.yml  sidebar.yml
shell_sage/: _modidx.py  config.py  core.py  logview.py  rag.py  tools.py
